@@ -60,8 +60,10 @@ wajig (2.3) unstable; urgency=low
   * RELOAD: if this fails, try FORCE-RELOAD
   * clean-up: wajig documentation consisted of over a 100 files! They are now
     just 2 (COMMANDS & TUTORIAL) and the rest is in code (Python docstrings)
+  * COMMANDS: generate dynamically to avoid to avoid outdatedness and
+    duplication.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Thu, 01 Mar 2012 21:35:29 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 07 Mar 2012 00:30:39 +0200
 
 wajig (2.2) unstable; urgency=low
 
